<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_above="@id/saveButton"
    android:layout_alignParentTop="true"
    app:layout_constraintBottom_toTopOf="@id/saveButton"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivProfile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/person"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.12" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginTop="@dimen/margin_standard"
                android:layout_marginEnd="@dimen/margin_standard"
                android:background="@drawable/border"
                android:drawableEnd="@drawable/ic_baseline_edit_24"
                android:hint="@string/username"
                android:padding="@dimen/margin_standard"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivProfile" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginTop="@dimen/margin_standard"
                android:layout_marginEnd="@dimen/margin_standard"
                android:background="@drawable/border"
                android:drawableEnd="@drawable/ic_baseline_edit_24"
                android:hint="@string/phone"
                android:padding="@dimen/margin_standard"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etUsername" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginTop="@dimen/margin_standard"
                android:layout_marginEnd="@dimen/margin_standard"
                android:background="@drawable/border"
                android:drawableEnd="@drawable/ic_baseline_edit_24"
                android:hint="@string/email"
                android:padding="@dimen/margin_standard"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etPhone" />

            <EditText
                android:id="@+id/etInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginTop="@dimen/margin_standard"
                android:layout_marginEnd="@dimen/margin_standard"
                android:layout_marginBottom="@dimen/margin_standard"
                android:background="@drawable/border"
                android:drawableEnd="@drawable/ic_baseline_edit_24"
                android:gravity="top|start"
                android:hint="@string/info"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLines="5"
                android:padding="@dimen/margin_standard"
                android:scrollbars="vertical"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etEmail" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginEnd="@dimen/margin_standard"
                android:layout_marginBottom="@dimen/margin_standard"
                android:background="#2196F3"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/etInfo"
                android:layout_marginTop="@dimen/margin_standard"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.4"
                android:indeterminateTint="@color/colorPrimary"
                android:visibility="gone"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

